# Elektronika-Galaksija

./: 2id15.bat  2wav.bat  Galakticki Rat (1985)(Voja, Antonic)(YU)_11KHz.TZX  Jumping Jack (1985)(Voja, Antonic)(YU)_11KHz.TZX  README.MD  README.md  Tetris_11KHz.TZX  demon_11KHz.TZX  demon_4410Hz_1470Hz_id15.tzx  demon_4410Hz_id15.tzx  gtp2wav64.7z
0.2.2/: Makefile.am  Makefile.in  basic.c  bin2gtp.PRJ  bin2gtp.c  chargendump.c  gtp.c  gtp.h  gtp2wav.PRJ  gtp2wav.c  gtp_run.c  gtp_run.h  modulation.c  modulation.h  pgm2scr.c  win11check.gtp
